--- a/html/index.html
+++ b/html/index.html
@@ -251,7 +251,7 @@
         </ul>
 
         <p class="copyright">
-            copy | ko lang to sa youtube
+            copyright | ko lang to sa youtube 
         </p>
     </footer>
 
