responsive for smaller device modified

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             James <span>Pro</span>gramming
          </a>
 
-         <i class="bx bx-menu" id="manu-icon"></i>
+         <i class="fa-solid fa-bars" id="menu-icon"></i>
 
          <nav class="navbar">
             <a href="#home">Home</a>
@@ -251,7 +251,7 @@
         </ul>
 
         <p class="copyright">
-            copyright | ko lang to sa youtube 
+            copyright | ko lang to sa youtube
         </p>
     </footer>
 
