header project 1 sample

--- a/html/index.html
+++ b/html/index.html
@@ -257,6 +257,7 @@
 
     <!-- Footer ends here -->
 
+    <!-- Javascript -->
     <script src="../javascript/htmlscript.js"></script>
 </body>
 </html>
